Changelog
=========

2.3.1 (unreleased)
------------------

- Nothing changed yet.


2.3.0 (2022-05-02)
------------------

- Add support for RF 4 and RF 5
  [Asko Soukka]
- Drop support in criticality witH RF 4 or later
  [Asko Soukka]
- Restore support for RF 3.2
  [Asko Soukka]

2.2.1 (2020-02-14)
------------------

- Revert support for Robot Framework 3.2b1 due to observee
  regression between 2.0.0 and 2.1.1
  [datakurre]

2.1.1 (2020-02-13)
------------------

- Add to release as universal wheel
  [datakurre]

2.1.0 (2020-02-13)
------------------

- Add optional support for retrying a failed test.
  Set environment variable ``ROBOTSUITE_RETRY_COUNT=X``.
  Or override this by passing ``retry_count=X`` to a ``RobotTestSuite`` call.
  Default is zero: no retries.  The retry count *excludes* the original try.
  [maurits]

- Add support for Robot Framework 3.2b1
  [datakurre]

- Drop robotframework-python3 requirement,
  robotframework itself is already python 3 compatible.
  [gforcada]

2.0.0 (2016-12-22)
------------------

- Do not support python 2.6 anymore
  [gforcada]

- Remove unittest2 references
  [gforcada]

1.7.0 (2015-07-23)
------------------

- Add support for Robot Framework 2.9
  [datakurre]

1.6.1 (2014-10-01)
------------------

- Add ROBOTSUITE_LOGLEVEL environment variable for filtering text execution
  errors during log merge
  [datakurre]

1.6.0 (2014-06-29)
------------------

- Add support for ROBOTSUITE_PREFIX-env for injecting custom string into all
  robotsuite test names
  [datakurre]
- Add UTF-8 support for robot variables [#6]
  [Tom Gross]
  [Vincent Fretin]
- Added Python 3.4 support
  [Vincent Fretin]


1.5.0 (2014-04-13)
------------------

- Restore original behavior to override the exiting robot_output.xml. Set
  environment variable ROBOTSUITE_APPEND_OUTPUT_XML=1 to append test results to
  the existing robot_output.xml.
  [datakurre]

1.4.3 (2014-01-27)
------------------
