@@ -4,7 +4,8 @@ Changelog
 2.3.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Let tests be critical by default.
+  Fixes `Plone issue 3537 <https://github.com/plone/Products.CMFPlone/issues/3537>`_.  [maurits]
 
 
 2.3.0 (2022-05-02)
